; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_read_cr0.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_read_cr0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xen_cr0_value = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @xen_read_cr0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @xen_read_cr0() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @xen_cr0_value, align 4
  %3 = call i64 @percpu_read(i32 %2)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp eq i64 %4, 0
  %6 = zext i1 %5 to i32
  %7 = call i64 @unlikely(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %0
  %10 = call i64 (...) @native_read_cr0()
  store i64 %10, i64* %1, align 8
  %11 = load i32, i32* @xen_cr0_value, align 4
  %12 = load i64, i64* %1, align 8
  %13 = call i32 @percpu_write(i32 %11, i64 %12)
  br label %14

14:                                               ; preds = %9, %0
  %15 = load i64, i64* %1, align 8
  ret i64 %15
}

declare dso_local i64 @percpu_read(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @native_read_cr0(...) #1

declare dso_local i32 @percpu_write(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
